--- a/src/global.css
+++ b/src/global.css
@@ -3,11 +3,15 @@
 @tailwind base;
 
 .dark .splitpanes__splitter {
-    @apply !bg-zinc-500 !border-zinc-600;
+    @apply !bg-zinc-500/80 !border-zinc-600/80;
 }
 
 .splitpanes--horizontal > .splitpanes__splitter {
     @apply !h-[10px];
+}
+
+.splitpanes--vertical > .splitpanes__splitter {
+    @apply !w-[8px];
 }
 
 .dark .toast {
